--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mineflayer": "^4.0.0",
     "mongoose": "^8.6.1",
     "sequelize": "^6.37.3",
+    "simple-git": "^3.26.0",
     "sqlite3": "^5.1.7",
     "winston": "^3.14.2"
   },
