--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "blockmind",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mmeerrkkaa/blockmind.git"
   },
   "keywords": [],
   "author": "merka",
